applications/mindspore-meetingserver/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: api-ingress
  namespace: mindspore-meetingserver
spec:
  tls:
    - hosts:
        - api.mindspore.cn
      secretName: api-mindspore-tls
  rules:
    - host: api.mindspore.cn
      http:
        paths:
        - backend:
            serviceName: meeting-service
            servicePort: 8080
          path: /meetings(/|$)(.*)
